js style lints, add string key supp
- Added yarn run v1.22.15
$ npx semistandard index.js
Done in 2.67s. - using semistandard. (feel free to switch to standard if desired)
- Removed application/json setHeader due to redundancy (express already deals with this)
- Use switch case instead of if/else if
- Only try parsing Redis response if it isn't an object already
- Misc inconsistencies fixed

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.17.3",
-    "json-bigint": "https://github.com/sidorares/json-bigint.git#0ef9fc57063a5b52951529c2e631009753c493b9",
+    "json-bigint": "git+https://github.com/sidorares/json-bigint.git#0ef9fc57063a5b52951529c2e631009753c493b9",
     "redis": "^4.0.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "npx semistandard index.js"
   }
 }
