--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.17.3",
+    "express": "4.17.3",
     "json-bigint": "git+https://github.com/sidorares/json-bigint.git#0ef9fc57063a5b52951529c2e631009753c493b9",
-    "redis": "^4.0.4"
+    "redis": "4.0.4"
   },
   "scripts": {
     "start": "node index.js",
