actions: Build for arm64 and armv6

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64,linux/arm/v6
           push: true
           tags: |
             ghcr.io/erisa/redis-exposer:latest
