--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -17,6 +17,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
         name: Cache Docker layers
         uses: actions/cache@v2
         with:
