--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "4.18.1",
-    "ioredis": "5.0.5",
-    "json-bigint": "git+https://github.com/sidorares/json-bigint.git#0ef9fc57063a5b52951529c2e631009753c493b9"
+    "express": "4.18.2",
+    "ioredis": "5.3.2",
+    "json-bigint": "git+https://github.com/sidorares/json-bigint.git#3391780b2a3f613bb51536c47e6cddbca31013eb"
   },
   "scripts": {
     "start": "node index.js",
     "lint": "npx standard index.js"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
