--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v6
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/erisa/redis-exposer:latest
